# Terminal221b

./: CHANGELOG.md  Containerfile  README.md  TODO_MVP.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/: __init__.py  main.py
src/agents/: __init__.py  base.py
tests/: test_license.py
utils/: license.py
